Fix active link not showing correct CSS

--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -8,7 +8,7 @@ body {
 a:hover,
 a:visited,
 a:active,
-a {
+.a-active {
   color: #7687E4;
   text-decoration: none;
   cursor: pointer;
